[tool.poetry]
name = "optuna_fabrics"
version = "0.1.0"
description = ""
authors = ["Max Spahn <m.spahn@tudelft.nl>"]

[tool.poetry.dependencies]
python = "^3.6.2,<3.10"
optuna = "^2.10.0"
plotly = "^5.8.0"
fabrics = {path = "../fabrics"}
joblib = "^1.1.0"
matplotlib = "^3.1"
sklearn = "^0.0"
planarenvs = "^1.0.1"
urdfenvs = {path = "../gym/env/gym_envs_urdf"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
